--- a/debian/control
+++ b/debian/control
@@ -1,14 +1,16 @@
 Source: desktop-defaults
 Section: x11
 Priority: optional
-Maintainer: Kel Modderman <kel@otaku42.de>
+Maintainer: Torsten Wohlfarth <towo@siduction.org>
+XSBC-Original-Maintainer: Kel Modderman <kel@otaku42.de>
 Uploaders: Stefan Lippers-Hollmann <s.l-h@gmx.de>,
  Joaquim Boura <x-un-i@berlios.de>,
  Dinko Sabo <cobrasbyte@gmx.de>
 Build-Depends: debhelper (>= 8)
 Standards-Version: 3.9.2
-Vcs-Svn: svn://svn.berlios.de/fullstory/desktop-defaults/trunk
-Vcs-Browser: http://svn.berlios.de/wsvn/fullstory/desktop-defaults/trunk/
+Vcs-Git:  git://git.siduction.org/packages/siduction-repository/desktop-defaults.git
+Vcs-Browser: http://git.siduction.org/?p=packages/siduction-repository/desktop-defaults.git
+Home: http://svn.berlios.de/wsvn/fullstory/desktop-defaults/
 
 Package: desktop-defaults-common
 Architecture: all
