--- a/debian/control
+++ b/debian/control
@@ -10,7 +10,7 @@ Build-Depends: debhelper (>= 8)
 Standards-Version: 3.9.2
 Vcs-Git:  git://git.siduction.org/packages/siduction-repository/desktop-defaults.git
 Vcs-Browser: http://git.siduction.org/?p=packages/siduction-repository/desktop-defaults.git
-Home: http://svn.berlios.de/wsvn/fullstory/desktop-defaults/
+Homepage: http://svn.berlios.de/wsvn/fullstory/desktop-defaults/
 
 Package: desktop-defaults-common
 Architecture: all
