--- a/debian/control
+++ b/debian/control
@@ -6,7 +6,7 @@ Maintainer: Torsten Wohlfarth <towo@siduction.org>
 XBSC-Original-Maintainer: Kel Modderman <kel@otaku42.de>
 Build-Depends: debhelper (>= 8)
 Standards-Version: 3.9.2
-Vcs-Git: git3@git.siduction.org:packages/siduction-repository/desktop-defaults.git
+Vcs-Git: git://git.siduction.org:packages/siduction-repository/desktop-defaults.git
 Vcs-Browser: http://git.siduction.org/?p=packages/siduction-repository/desktop-defaults.git;a=summary
 =======
 Maintainer: Torsten Wohlfarth <towo@siduction.org>
