agaida uploader, build fixes #429

--- a/debian/control
+++ b/debian/control
@@ -2,6 +2,7 @@ Source: desktop-defaults
 Section: x11
 Priority: optional
 Maintainer: Torsten Wohlfarth <towo@siduction.org> 
+Uploaders: Alf Gaida <agaida@siduction.org>
 XBSC-Original-Maintainer: Kel Modderman <kel@otaku42.de>
 Build-Depends: debhelper (>= 8)
 Standards-Version: 3.9.2
