--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,8 @@ Source: desktop-defaults
 Section: x11
 Priority: optional
 Maintainer: Torsten Wohlfarth <towo@siduction.org> 
-Uploaders: Alf Gaida <agaida@siduction.org> Ferdinand Thommes <devil@siduction.org>
+Uploaders: Alf Gaida <agaida@siduction.org>,
+           Ferdinand Thommes <devil@siduction.org>
 XBSC-Original-Maintainer: Kel Modderman <kel@otaku42.de>
 Build-Depends: debhelper (>= 8)
 Standards-Version: 3.9.2
