* .gitignore modified *  add soure overrides to prevent lintian complaining about    unknown-field-in-dsc original-maintainer *  fixes #640

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,25 @@
 debian/files
-debian/desktop-defaults-*/
-debian/*log
-debian/*substvars
-debian/*debhelper
-debian/t*/
+debian/desktop-defaults-common.debhelper.log
+debian/desktop-defaults-common.postinst.debhelper
+debian/desktop-defaults-common.postrm.debhelper
+debian/desktop-defaults-common.substvars
+debian/desktop-defaults-common/
+debian/desktop-defaults-kde.debhelper.log
+debian/desktop-defaults-kde.postinst.debhelper
+debian/desktop-defaults-kde.postrm.debhelper
+debian/desktop-defaults-kde.substvars
+debian/desktop-defaults-kde/
+debian/desktop-defaults-lxde.debhelper.log
+debian/desktop-defaults-lxde.postinst.debhelper
+debian/desktop-defaults-lxde.postrm.debhelper
+debian/desktop-defaults-lxde.substvars
+debian/desktop-defaults-lxde/
+debian/desktop-defaults-razorqt.debhelper.log
+debian/desktop-defaults-razorqt.substvars
+debian/desktop-defaults-razorqt/
+debian/desktop-defaults-xfce.debhelper.log
+debian/desktop-defaults-xfce.postinst.debhelper
+debian/desktop-defaults-xfce.postrm.debhelper
+debian/desktop-defaults-xfce.substvars
+debian/desktop-defaults-xfce/
+
