* siduction-settings-lxde added as dependency to desktop-defaults-lxde * refs #712

--- a/debian/control
+++ b/debian/control
@@ -58,6 +58,7 @@ Depends: ${misc:Depends},
  distro-defaults,
  fll-live-initscripts,
  desktop-defaults-common,
+ siduction-settings-lxde,
  lxde-core
 Description: user presets specific to the LXDE desktop environment
  This package provides required infrastructure to tweak the LXDE desktop
