--- a/debian/control
+++ b/debian/control
@@ -92,13 +92,13 @@ Description: user presets specific to the Xfce desktop environment
  This is a FULLSTORY live-only package and must not be installed to an
  ordinary system.
 
-Package: desktop-defaults-razorqt
+Package: desktop-defaults-rqt
 Architecture: all
 Depends: ${misc:Depends},
  distro-defaults,
  fll-live-initscripts,
  desktop-defaults-common,
- siduction-settings-razorqt,
+ siduction-settings-rqt,
 Description: user presets specific to the Razor-qt desktop environment
  This package provides required infrastructure to tweak the Razor-qt desktop
  of the F.U.L.L.S.T.O.R.Y. live Linux media.
