--- a/debian/rules
+++ b/debian/rules
@@ -7,5 +7,6 @@ override_dh_installinit:
 	dh_installinit
 	dh_installinit --package=desktop-defaults-common --no-start --name=fll-common-desktop -- start 97 S .
 	dh_installinit --package=desktop-defaults-kde    --no-start --name=fll-kde-desktop    -- start 96 S .
+	dh_installinit --package=desktop-defaults-gnome  --no-start --name=fll-gnome-desktop    -- start 96 S .
 	dh_installinit --package=desktop-defaults-xfce   --no-start --name=fll-xfce-desktop   -- start 96 S .
 	dh_installinit --package=desktop-defaults-lxde   --no-start --name=fll-lxde-desktop   -- start 96 S .
