--- a/debian/rules
+++ b/debian/rules
@@ -10,3 +10,4 @@ override_dh_installinit:
 	dh_installinit --package=desktop-defaults-gnome  --no-start --name=fll-gnome-desktop    -- start 96 S .
 	dh_installinit --package=desktop-defaults-xfce   --no-start --name=fll-xfce-desktop   -- start 96 S .
 	dh_installinit --package=desktop-defaults-lxde   --no-start --name=fll-lxde-desktop   -- start 96 S .
+        dh_installinit --package=desktop-defaults-nox    --no-start --name=fll-nox            -- start 96 S .
