--- a/debian/control
+++ b/debian/control
@@ -118,7 +118,8 @@ Architecture: all
 Depends: ${misc:Depends},
  distro-defaults,
  fll-live-initscripts,
- desktop-defaults-common
+ desktop-defaults-common,
+ sdiduction-settings-gnome,
 Description: user presets specific to the GNOME desktop environment
  This package provides required infrastructure to tweak the GNOME desktop
  of the F.U.L.L.S.T.O.R.Y. live Linux media.
@@ -131,7 +132,8 @@ Architecture: all
 Depends: ${misc:Depends},
  distro-defaults,
  fll-live-initscripts,
- desktop-defaults-common
+ desktop-defaults-common,
+ sidction-settings-nox,
 Description: user presets specific to the noX environment
  This package provides required infrastructure to tweak noX
  of the F.U.L.L.S.T.O.R.Y. live Linux media.
