--- a/debian/control
+++ b/debian/control
@@ -118,8 +118,7 @@ Architecture: all
 Depends: ${misc:Depends},
  distro-defaults,
  fll-live-initscripts,
- desktop-defaults-common,
- sdiduction-settings-gnome,
+ desktop-defaults-common
 Description: user presets specific to the GNOME desktop environment
  This package provides required infrastructure to tweak the GNOME desktop
  of the F.U.L.L.S.T.O.R.Y. live Linux media.
